<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#FF111328"
        android:gravity="center_horizontal">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadora_salario_neto"
            android:textColor="#FFFFFF"
            android:background="#6200EE"
            android:textSize="24sp"
            android:layout_marginBottom="32dp"/>

        <!-- Campo para Salario Bruto -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salario_bruto_anual"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etSalarioBruto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_el_salario_bruto"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:layout_marginBottom="12dp"/>

        <!-- Campo para Número de Pagas -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_mero_de_pagas"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/etNumeroPagas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_el_n_mero_de_pagas"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:layout_marginBottom="12dp"/>

        <!-- Campo para Edad -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/etEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_tu_edad"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:layout_marginBottom="12dp"/>

        <!-- Spinner para Grupo Profesional -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo_profesional"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginBottom="6dp"/>

        <Spinner
            android:id="@+id/spGrupoProfesional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp" />

        <!-- Spinner para Grado de Discapacidad -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grado_de_discapacidad"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/spGradoDiscapacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <!-- Spinner para Estado Civil -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estado_civil"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/spEstadoCivil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"/>

        <!-- Campo para Número de Hijos -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_mero_de_hijos"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etNumeroHijos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_el_n_mero_de_hijos"
            android:inputType="number"
            android:padding="14dp"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:layout_marginBottom="32dp"/>

        <!-- Botón Calcular -->
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:textColor="#FFFFFF"
            android:background="#6200EE"
            android:layout_marginTop="16dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>